--- a/CinemaBook/Scence/Booking/PaymentBill/view/cellTable/ItemComboFoodAddTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/PaymentBill/view/cellTable/ItemComboFoodAddTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,6 +58,11 @@
             <point key="canvasLocation" x="132" y="110"/>
         </tableViewCell>
     </objects>
+    <designables>
+        <designable name="9bg-ix-Pco">
+            <size key="intrinsicContentSize" width="85" height="20.5"/>
+        </designable>
+    </designables>
     <resources>
         <image name="PORNCORN-TEST" width="546" height="546"/>
     </resources>
