--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
@@ -20,31 +26,131 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vec-iT-mKk">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="620-D7-xZg">
+                            <rect key="frame" x="0.0" y="5" width="414" height="60"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-admin" translatesAutoresizingMaskIntoConstraints="NO" id="hcb-62-GwD">
+                                    <rect key="frame" x="20" y="5" width="50" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="50" id="LcO-U2-Aaq"/>
+                                        <constraint firstAttribute="height" constant="50" id="skq-cl-sGf"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="25"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ticket-2" translatesAutoresizingMaskIntoConstraints="NO" id="AS3-bT-AeP">
+                                    <rect key="frame" x="364" y="15" width="30" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="30" id="PrK-3C-kHa"/>
+                                        <constraint firstAttribute="height" constant="30" id="f5B-3u-R8U"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyễn Xuân Tiến Dũng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-WZ-Dbr">
+                                    <rect key="frame" x="78" y="8" width="100" height="28.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="100" id="g4S-fU-S63"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcoinsign.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jp9-qH-MqZ">
+                                    <rect key="frame" x="78" y="37" width="22" height="21"/>
+                                    <color key="tintColor" systemColor="systemYellowColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="22" id="2nq-35-qsO"/>
+                                        <constraint firstAttribute="height" constant="22" id="ojh-5w-QrO"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1,000,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4b-MK-RxH">
+                                    <rect key="frame" x="100" y="39.5" width="56.5" height="14.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <color key="textColor" systemColor="systemYellowColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="hcb-62-GwD" firstAttribute="leading" secondItem="620-D7-xZg" secondAttribute="leading" constant="20" id="141-e6-Guv"/>
+                                <constraint firstItem="Jp9-qH-MqZ" firstAttribute="top" secondItem="6ly-WZ-Dbr" secondAttribute="bottom" id="3BH-cO-KAx"/>
+                                <constraint firstAttribute="trailing" secondItem="AS3-bT-AeP" secondAttribute="trailing" constant="20" id="4q6-kJ-Mf4"/>
+                                <constraint firstItem="u4b-MK-RxH" firstAttribute="leading" secondItem="Jp9-qH-MqZ" secondAttribute="trailing" id="7WD-wf-emw"/>
+                                <constraint firstAttribute="height" constant="60" id="Im8-fS-zC2"/>
+                                <constraint firstItem="u4b-MK-RxH" firstAttribute="top" secondItem="6ly-WZ-Dbr" secondAttribute="bottom" constant="3" id="OXd-Nm-T8p"/>
+                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="SAN-yl-TbZ"/>
+                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="WBp-kl-9um"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="ZPC-rR-fXV"/>
+                                <constraint firstItem="6ly-WZ-Dbr" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="top" constant="8" id="cUE-kr-Ndl"/>
+                                <constraint firstItem="hcb-62-GwD" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="cdA-5A-VnX"/>
+                                <constraint firstItem="AS3-bT-AeP" firstAttribute="centerY" secondItem="620-D7-xZg" secondAttribute="centerY" id="eU0-0T-jBc"/>
+                                <constraint firstItem="Jp9-qH-MqZ" firstAttribute="leading" secondItem="hcb-62-GwD" secondAttribute="trailing" constant="8" id="yDd-Fm-BmR"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                    <size key="value" width="1" height="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                    <color key="value" systemColor="systemGray4Color"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVx-X6-bnx">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
-                            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <rect key="frame" x="0.0" y="70" width="414" height="744"/>
+                            <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
-                        <constraint firstItem="vVx-X6-bnx" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" id="0bM-Yl-nus"/>
+                        <constraint firstItem="620-D7-xZg" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" constant="5" id="2Ju-VW-Uht"/>
+                        <constraint firstItem="vVx-X6-bnx" firstAttribute="top" secondItem="620-D7-xZg" secondAttribute="bottom" constant="5" id="AHO-Ip-zEY"/>
                         <constraint firstAttribute="bottom" secondItem="vVx-X6-bnx" secondAttribute="bottom" id="Cue-g8-RHp"/>
+                        <constraint firstItem="620-D7-xZg" firstAttribute="leading" secondItem="vec-iT-mKk" secondAttribute="leading" id="LJj-eD-frE"/>
                         <constraint firstAttribute="trailing" secondItem="vVx-X6-bnx" secondAttribute="trailing" id="XPh-Vb-GRS"/>
+                        <constraint firstAttribute="trailing" secondItem="620-D7-xZg" secondAttribute="trailing" id="e8g-NP-dZR"/>
                         <constraint firstItem="vVx-X6-bnx" firstAttribute="leading" secondItem="vec-iT-mKk" secondAttribute="leading" id="hdg-dM-ud7"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemGray6Color"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="vec-iT-mKk" secondAttribute="bottom" id="Bbk-T2-Ax9"/>
                 <constraint firstItem="vec-iT-mKk" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="MR7-9C-tEG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="vec-iT-mKk" secondAttribute="trailing" id="m7i-Au-Tuu"/>
                 <constraint firstItem="vec-iT-mKk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wNh-xg-Fnx"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </view>
     </objects>
+    <resources>
+        <image name="avatar-admin" width="672" height="1536"/>
+        <image name="bitcoinsign.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="ticket-2" width="512" height="512"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
