--- a/CinemaBook/Scence/Home/view/cell/section4/cellsection/FlimsCollectionViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/section4/cellsection/FlimsCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,31 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h2" translatesAutoresizingMaskIntoConstraints="NO" id="oad-O2-WsO">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="280"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="280" id="USa-Qv-ed0"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09i-53-omh">
-                                <rect key="frame" x="0.0" y="280" width="300" height="20"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="oad-O2-WsO" firstAttribute="leading" secondItem="XQa-Ff-GdQ" secondAttribute="leading" id="3jv-oy-WJ8"/>
-                            <constraint firstItem="oad-O2-WsO" firstAttribute="top" secondItem="XQa-Ff-GdQ" secondAttribute="top" id="6x9-hn-vAM"/>
-                            <constraint firstAttribute="trailing" secondItem="09i-53-omh" secondAttribute="trailing" id="A6w-rL-cav"/>
-                            <constraint firstItem="09i-53-omh" firstAttribute="top" secondItem="oad-O2-WsO" secondAttribute="bottom" id="BQX-cn-l3B"/>
-                            <constraint firstAttribute="bottom" secondItem="09i-53-omh" secondAttribute="bottom" id="Qvp-cS-MCn"/>
-                            <constraint firstAttribute="trailing" secondItem="oad-O2-WsO" secondAttribute="trailing" id="Zrw-Ot-H6x"/>
-                            <constraint firstItem="09i-53-omh" firstAttribute="leading" secondItem="XQa-Ff-GdQ" secondAttribute="leading" id="lqH-YT-L8c"/>
+                            <constraint firstItem="oad-O2-WsO" firstAttribute="top" secondItem="XQa-Ff-GdQ" secondAttribute="top" id="S1x-SJ-cCa"/>
+                            <constraint firstAttribute="trailing" secondItem="oad-O2-WsO" secondAttribute="trailing" id="aFc-hx-0UE"/>
+                            <constraint firstItem="oad-O2-WsO" firstAttribute="leading" secondItem="XQa-Ff-GdQ" secondAttribute="leading" id="aKY-dW-UdN"/>
+                            <constraint firstAttribute="bottom" secondItem="oad-O2-WsO" secondAttribute="bottom" id="cPU-r1-XMV"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yph-TG-Wgy">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yph-TG-Wgy">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,6 +56,7 @@
                     </button>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="XQa-Ff-GdQ" secondAttribute="bottom" id="5yD-QF-3UL"/>
                 <constraint firstAttribute="bottom" secondItem="Yph-TG-Wgy" secondAttribute="bottom" id="GGi-dE-YWh"/>
@@ -79,11 +67,9 @@
                 <constraint firstItem="Yph-TG-Wgy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tFJ-DS-AmG"/>
                 <constraint firstAttribute="trailing" secondItem="XQa-Ff-GdQ" secondAttribute="trailing" id="vEs-aL-ehQ"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="232" height="164"/>
             <connections>
                 <outlet property="image_poster" destination="oad-O2-WsO" id="bXw-rF-lt7"/>
-                <outlet property="lbl_title" destination="09i-53-omh" id="St6-8O-r0f"/>
             </connections>
             <point key="canvasLocation" x="263.768115942029" y="146.65178571428569"/>
         </collectionViewCell>
